--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cli": "^13.2.6",
+    "@angular/compiler-cli": "~13.1.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
-    "@angular/cli": "~13.1.3",
-    "@angular/compiler-cli": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
@@ -23,12 +23,12 @@
     "angular-in-memory-web-api": "^0.13.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
-    "@angular/cli": "~13.1.3",
+    "@angular/cli": "^13.2.6",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
